trying to create LED display communication to make a dummy sequencer. not working yet

--- a/serialExample.vcxproj
+++ b/serialExample.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="src\moduleFactory.h" />
     <ClInclude Include="src\modules\midiDummy.h" />
     <ClInclude Include="src\modules\module.h" />
+    <ClInclude Include="src\modules\patchMenu.h" />
     <ClInclude Include="src\modules\sequencer.h" />
     <ClInclude Include="src\modules\textDummy.h" />
     <ClInclude Include="src\ofApp.h" />
