bare minimum of a sequencer working

--- a/serialExample.vcxproj.filters
+++ b/serialExample.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClInclude Include="src\modules\patchMenu.h">
       <Filter>src\modules</Filter>
     </ClInclude>
+    <ClInclude Include="src\timer.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
