--- a/serialExample.vcxproj
+++ b/serialExample.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="src\modules\sequencer.h" />
     <ClInclude Include="src\modules\textDummy.h" />
     <ClInclude Include="src\ofApp.h" />
+    <ClInclude Include="src\timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
