successfully created the minimum of a modular message exchange

--- a/serialExample.vcxproj.filters
+++ b/serialExample.vcxproj.filters
@@ -125,6 +125,12 @@
     <ClInclude Include="src\timer.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\hardwareView.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\eventMessage.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
