--- a/serialExample.vcxproj
+++ b/serialExample.vcxproj
@@ -201,7 +201,9 @@
     <ClInclude Include="..\..\..\addons\ofxMidi\src\ofxMidiMessage.h" />
     <ClInclude Include="..\..\..\addons\ofxMidi\src\ofxMidiOut.h" />
     <ClInclude Include="..\..\..\addons\ofxMidi\src\ofxMidiTypes.h" />
+    <ClInclude Include="src\eventMessage.h" />
     <ClInclude Include="src\hardwareController.h" />
+    <ClInclude Include="src\hardwareView.h" />
     <ClInclude Include="src\moduleFactory.h" />
     <ClInclude Include="src\modules\midiDummy.h" />
     <ClInclude Include="src\modules\module.h" />
